# aliyun-ddns

./: .gitignore  CHANGELOG  Cargo.toml  README.md  config-template.toml
src/: main.rs
src/config/: load_config.rs  mod.rs  record.rs
src/service/: get_ip.rs  ip_check.rs  mod.rs
src/service/alidns/: dns_operation.rs  mod.rs  request_auth.rs
src/util/: log_collector.rs  mod.rs
