[package]
name = "aliyun-ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.1"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
chrono = "0.4.38"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
    "chrono",
] }
tracing-appender = "0.2.3"
